modified:   _config.yml 	deleted:    _posts/2012-04-15-test.markdown 	deleted:    _posts/core-samples/2011-12-29-jekyll-introduction.md

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : xuwenshg blog
+title : blog of xuwenshg
 tagline : Site Tagline
 author : xuwenshg
 name : wenshg xu
